@@ -3,6 +3,8 @@ unity (6.0.0-0ubuntu2) UNRELEASED; urgency=low
   * Cherry pick upstream fixes.
     - [regression] [unity 6.0] Fullscreen windows flicker and/or never redraw 
       properly if panel_opacity<1.0 or dash is opened (LP: #1024911)
+    - panel and launcher blinks when using libreoffice presenter/spreadsheet
+      (LP: #1024459)
 
  -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Mon, 16 Jul 2012 14:48:14 +0200
 
